# baxxter

./: README.md  pyproject.toml
baxxter/: config.py  main.py
baxxter/cogs/: music.py
