[tool.poetry]
name = "baxxter"
version = "0.1.0"
description = ""
authors = ["karrni <karrni@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.4.1"
isort = "^5.13.2"
ruff = "^0.4.2"


[tool.poetry.group.voice.dependencies]
discord-py = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
